--- a/first/style.css
+++ b/first/style.css
@@ -6,50 +6,130 @@ html, body {
 }
 
 .first-quarter {
-	height: 20%;
-	width: 100%;
-	background-color: green;
+	height: 175px;
+	width: 900px;
+	background-color: white;
+	position: relative;
+	margin: auto;
 }
 
 .second-quarter {
-	height: 30%;
+	height: 250px;
+	width: 900px;
+	margin: auto;
+	margin-bottom: 45px;
+	
 }
 
 .third-quarter {
-	height: 30%;
+	height: 250px;
+	width: 900px;
+	margin: auto;
+	position: relative;
 }
 
 .fourth-quarter {
-	height: 20%;
+	height: 175px;
+	width: 900px;
+	margin: auto;
+	position: relative;
+	margin-top: 60px;
 }
 
 .top-red {
-	height: 90%;
-	width: 30%;
+	height: 150px;
+	width: 266.66px;
 	background-color: #D0021B;
 	display: inline-block;
-	margin-left: 2%;
-	margin-top: 2%;
+	margin-left: 25px;
+	margin-top: 10px;
+	
+	
 }
 
 .top-blue {
-	height: 90%;
-	width: 30%;
+	height: 150px;
+	width: 266.66px;
 	background-color: #4A90E2;
 	display: inline-block;
-	margin-left: 2%;
-	margin-right: 2%;
-	margin-top: 2%;
+	margin-left: 25px;
+	margin-right: 25px;
+	margin-top: 10px;
+
 }
 
 .top-gray {
-	height: 90%;
-	width: 30%;
+	height: 150px;
+	width: 266.66px;
 	background-color: #4A4A4A;
 	display: inline-block;
-	margin-right: 2%;
-	position: relative;
-	margin-top: 2%;
+	margin-right: 25px;
+	margin-top: 10px;
+}
+
+p {
+	font-family: Verdana;
+	text-align: justify;
+	font-size: 16px;
+	padding: 0;
+	margin-left: 25px;
+	margin-right: 25px;
+}
+
+.middle-red {
+	background-color: #D0021B;
+	height: 285px;
+	width: 350px;
+	display: inline-block;
+	position: absolute;
+	left: 25px;
+}
+
+.middle-blue {
+	background-color: #4A90E2;
+	height: 285px;
+	width: 550px;
+	display: inline-block;
+	position: absolute;
+	left: 325px;
+}
+
+.b-blue {
+	background-color: #4A90E2;
+	height: 150px;
+	position: absolute;
+	width: 600px;
+	margin-left: 25px;
+	display: inline-block;
+	left: 0px;
+}
+
+.b-red-1 {
+	background-color: #D0021B;
+	height: 150px;
+	position: absolute;
+	width: 12.5px;
+	display: inline-block;
+	left: 625px;
+
+}
+
+.b-gray {
+	background-color: #4A4A4A;
+	height: 150px;
+	position: absolute;
+	width: 225px;
+	display: inline-block;
+	left: 637.5px;
+}
+
+.b-red-2 {
+	background-color: #D0021B;
+	height: 150px;
+	position: absolute;
+	width: 12.5px;
+	display: inline-block;
+	left: 862.5px;
 }
 
 
